# flitter

./: .flake8  .gitignore  .readthedocs.yaml  FUNDING.yml  LICENSE  README.md  flitter.sh  push.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-coverage.yml  ci-lint.yml  ci-test.yml  python-lint.yml  python-package.yml  python-release.yml  python-test.yml  release-package.yml
atom/language-flitter/: package.json
atom/language-flitter/grammars/: flitter.cson
atom/language-flitter/settings/: language-flitter.cson
docs/: background.md  builtins.md  canvas.md  canvas3d.md  conf.py  controllers.md  counters.md  index.md  install.md  language.md  physics.md  push2.md  requirements.txt  shaders.md  tutorial.md  windows.md  xtouch_mini.md
docs/diagrams/: Makefile  box_uvmap.fl  dummyshader.fl  dummyshader.frag  easings.fl  petri.fl  pseudorandoms.fl  spheroidbox.fl  torus.fl  waveforms.fl
docs/tutorial_images/: Makefile  tutorial1.fl  tutorial2.fl  tutorial3.fl  tutorial4.fl  tutorial5.fl  tutorial6.fl
examples/: Makefile  bauble.fl  bloom.fl  bounce.fl  bug.fl  canvas3d.fl  dmx.fl  dots.fl  hello.fl  hoops.fl  kinect.fl  laser.fl  linear.fl  linelight.fl  oklch.fl  physics.fl  push2.fl  rbox.fl  sdf.fl  smoke.fl  solidgeometry.fl  sphere.fl  teaset.fl  test.fl  textures.fl  translucency.fl  tutorial.fl  video.fl
examples/common/: axes.fl  bloom.fl  dots.fl  filters.fl  rbox.fl
examples/glsl/: blur.frag  color_adjust.frag  feedback.frag  water.frag
examples/specialist/: laser.fl  osc.fl  pixienet.fl  push2.fl
flitter/: __init__.py  __main__.py  cache.py  clock.py  control.py  model.pxd  model.pyx  streams.py
flitter/ableton/: __main__.py  constants.py  palette.py  push.py
flitter/engine/: __main__.py  control.py  render.py
flitter/interface/: controls.py  osc.py  osc.pyx  push.py
flitter/language/: ast.py  functions.pyx  grammar.lark  interpreter.py  parser.py  print.py  simplifier.py  tree.pyx
flitter/model/: values.py  values.pyx
flitter/render/: canvas.py  canvas.pyx  canvas3d.pyx  dmx.pyx  helpers.pyx  laser.pyx  process.py  scene.py  window.py
flitter/render/glsl/: blend_functions.glsl  record.frag  standard_lighting.frag  video.vert
flitter/tests/: test_vector.py
scripts/: coverage_badge.py
src/flitter/: __init__.py  cache.py  clock.py  model.pxd  model.pyx  plugins.py  streams.py  timer.pxd
src/flitter/ableton/: constants.py  events.py  push.py
src/flitter/controller/: __init__.py  driver.py  midi.py  xtouch_mini.py
src/flitter/engine/: __main__.py  control.py
src/flitter/interact/: __init__.py  physics.py  physics.pyx
src/flitter/interact/controller/: __init__.py  driver.py  midi.py  xtouch_mini.py
src/flitter/interface/: controls.py  push.py
src/flitter/language/: context.pxd  context.pyx  functions.pxd  functions.pyx  grammar.lark  noise.pyx  parser.py  tree.pyx  vm.pxd  vm.pyx
src/flitter/language/functions/: __init__.py  color.pyx  easing.pyx  maths.pyx  misc.pyx  random.pxd  random.pyx  waves.pyx
src/flitter/render/: __init__.py  canvas.pyx  canvas3d.pyx  counter.pyx  dmx.pyx  laser.pyx  offscreen.py  osc.py  physics.pyx  pixienet.py  process.py  window.py
src/flitter/render/controller/: __init__.py  driver.py  midi.py  push.py  push2.py  xtouch_mini.py
src/flitter/render/glsl/: __init__.py  standard_lighting.vert
src/flitter/render/window/: __init__.py  canvas.pyx  canvas3d.pyx  glconstants.py  image.py  kinect.py  models.pxd  models.pyx  record.py  shaders.py  target.py  video.py
src/flitter/render/window/glsl/: adjust.frag  backface_lighting.frag  bloom.frag  blur.frag  chromakey.frag  color_functions.glsl  colorspace_functions.glsl  composite_functions.glsl  default.frag  default.vert  ease_functions.glsl  edges.frag  feedback.frag  filter_functions.glsl  flare.frag  kaleid.frag  kinect.frag  lighting_functions.glsl  noise.frag  noise_functions.glsl  pbr_lighting.glsl  record.frag  standard_lighting.frag  standard_lighting.vert  transform.frag  video.frag  video.vert  vignette.frag  window.frag
tests/: test_compiler.py  test_counter.py  test_engine.py  test_functional.py  test_functions.py  test_language.py  test_matrix33.py  test_matrix44.py  test_midi.py  test_models.py  test_node.py  test_parser.py  test_quaternion.py  test_scripts.py  test_simplifier.py  test_state.py  test_vector.py  test_vm.py  utils.py
tests/scripts/: simple.fl
