[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "flitter-lang"
dynamic = ["version"]
description = "Flitter is a functional programming language and declarative system for describing 2D and 3D visuals"
authors = [
  {name = "Jonathan Hogg", email = "me@jonathanhogg.com"},
]
maintainers = [
  {name = "Jonathan Hogg", email = "me@jonathanhogg.com"},
]
readme = "README.md"
license = {file="LICENSE"}
keywords = ["language", "opengl", "live-coding", "live-visuals"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Environment :: GPU",
  "Environment :: MacOS X",
  "Environment :: X11 Applications",
  "Topic :: Artistic Software",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: 3D Rendering",
]
requires-python = ">= 3.10"
dependencies = [
    "av",
    "glfw",
    "lark",
    "loguru",
    "mako",
    "manifold3d",
    "mapbox_earcut",
    "moderngl",
    "networkx",
    "numpy",
    "pillow>=10.1.0",
    "pyserial",
    "pyusb",
    "regex",
    "rtmidi2",
    "rtree",
    "scipy",
    "shapely",
    "skia-python==121.0b6",
    "trimesh",
]

[project.urls]
Documentation = "https://flitter.readthedocs.io/"
Repository = "https://github.com/jonathanhogg/flitter.git"
Issues = "https://github.com/jonathanhogg/flitter/issues"

[project.scripts]
flitter = "flitter.engine.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "flitter.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.lark", "*.pxd", "*.glsl", "*.frag", "*.vert"]

[tool.cython-lint]
max-line-length = 160

[tool.cibuildwheel]
skip = ["pp*", "*_i686", "*-win32"]
