
[metadata]
name = flitter
version = 1.0.0
license_files = LICENSE

[options]
python_requires = >=3.10
packages = find:
setup_requires =
    cython>=3.0.0b2
install_requires =
    av
    lark
    loguru
    mako
    moderngl
    numpy
    pillow
    pyglet
    pyserial
    python-rtmidi @ git+https://github.com/SpotlightKid/python-rtmidi.git@eb16ab3268b29b94cd2baa6bfc777f5cf5f908ba
    pyusb
    regex
    scipy
    skia-python
    trimesh

[options.entry_points]
console_scripts =
    flitter = flitter.engine.__main__:main
    flitter-push = flitter.interface.push:main

[options.package_data]
flitter = model.pxd
flitter.language = grammar.lark
flitter.render.glsl = *.glsl, *.frag, *.vert

[options.packages.find]
where = src

[flake8]
max_line_length = 160
max_complexity = 30
