
[metadata]
name = flitter-lang
version = 1.0.0b1
license_files = LICENSE

[options]
python_requires = >=3.10
packages = find:
setup_requires =
    cython>=3.0.0b2
install_requires =
    av
    glfw
    lark
    loguru
    mako
    moderngl
    numpy
    pillow
    pyserial
    pyusb
    regex
    rtmidi2
    scipy
    skia-python
    trimesh

[options.entry_points]
console_scripts =
    flitter = flitter.engine.__main__:main
    flitter-push = flitter.interface.push:main

[options.package_data]
flitter = model.pxd
flitter.language = grammar.lark
flitter.render.window.glsl = *.glsl, *.frag, *.vert

[options.packages.find]
where = src

[flake8]
max_line_length = 160
max_complexity = 30
